# itseez-ss-2015-practice2-opencv-intro

./: .travis.yml  CMakeLists.txt  README.md
include/: auxiliaries.hpp  img_proc.hpp
sample_template/: CMakeLists.txt  application.cpp  application.hpp  auxiliaries.cpp  img_proc.cpp  main.cpp  processing.cpp  processing.hpp
samples/: CMakeLists.txt  sample_template.cpp
src/: CMakeLists.txt  auxiliaries.cpp  img_proc.cpp
test/: CMakeLists.txt  aux_test.cpp  img_proc_test.cpp
